# safari

./: .gitignore  README.md  build_site.py  fix_misclassifications.py  index.html  local_pipeline.py  pipeline.py  pyproject.toml  rebuild_rhinos.py  rebuild_site.py
data/: animal_info.json  classifications.json
